MMA-6823 Endringer i Arkivstruktur
- map arkivdel fra fagområde
- map klasse og mappe
- sørg for at vi slår opp eventuelle historiske navn for brukeren på historiske tidspunkter